--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- <meta description=""> -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta description=""> -->
-    <title>Clima Service</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="keywords" content="aire acondicionado, aire acondicionado torrevieja, instalacion de aire acondicionado, reparacion de aires acondicionados, mantenimiento de aires acondicionados, aires acondicionados vega baja ">
+    <meta name="description" content="Adquiere tu sistema de aire acondicionado para casa o construye tus proyectos de climatización para edificios y grandes propieades. Nuestros expertos te guiarán de acuerdo a tus necesidades">
+    <meta name="author" content="Santiago Serrato">
+    <meta name="copyright" content="Clima service">
+
     <!--Font awesome cdn link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <!-- fuente oswald -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <title>Home | Clima Service</title>
 </head>
 <body>
     <!--header section starts-->
     <header class="header">
+
         <div class="logo-container">
-        <div class="logo">
-            <a href="#home" class="logo"><img src="images/Logoclimaservice.png" alt="logoEmpresa">
+            <a href="#home" class="logo">
+                <img src="images/Logoclimaservice.png" alt="logoEmpresa">
             </a>
         </div>
-    </div>
 
         <nav class="navbar">
             <a href="#home"> Inicio</a>
             <a href="#about">Sobre nosotros</a>
-            <a href="#menu"></span>Servicios</a>
+            <a href="#menu">Servicios</a>
             <a href="#products">Productos</a>
             <a href="#review">Reviews</a>
             <a href="#contact">Contacto</a>
@@ -51,17 +52,18 @@
     <section class="home" id="home">
 
         <div class="content">
-            <h3>Climatización a <span> toda España </span> </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente tempore inventore fuga! Porro, iure praesentium!</p>
-            <a href="#" class="btn">Adquiere tu equipo</a>
+            <h1>Climatización a <span> toda España </span> </h1>
+            <p>Llevamos a tu hogar, toda la calidad de un buen aire</p>
+            <p>Proporcionamos soluciones a los problemas de climatización, mantenimiento e instalación de aires acondicionados </p>
+            <a href="pages/venta.html" class="btn">Adquiere tu equipo</a>
         </div>
     </section>
     <!-- home section ends -->
     
     <!-- about section starts -->
-    <section class="about" id="about">
+    <section id="about">
 
-        <h1 class="heading"> <span>Sobre</span> nosotros  </h1>
+        <h2 class="heading"> <span>Sobre</span> nosotros  </h2>
 
         <div class="row">
             <div class="image">
@@ -69,9 +71,8 @@
             </div>
             <div class="content">
                 <h3>Conoce un poco más acerca de quiénes somos</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima consectetur, id vero vel accusantium ipsa eos nobis. Porro ad quis nobis, ducimus assumenda vel corrupti dignissimos nemo architecto provident id!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem facilis labore culpa quisquam, numquam cupiditate fuga earum illo eum quasi!</p>
-                <a href="pages/about.html" target="_blank" class="btn">Informate más</a>
+                <p>Entérate de nuestro <strong>proposito</strong> como empresa y de la <strong>trayectoria</strong> que hemos trazado para alcanzar la experiencia que nos caracteriza</p>
+                <a href="pages/about.html" class="btn">Informate más</a>
             </div>
         </div>
     </section>
@@ -79,7 +80,7 @@
 
     <!-- menu section starts -->
     <section class="menu" id="menu">
-        <h1 class="heading"> Nuestros <span>Servicios</span> </h1>
+        <h2 class="heading"> Nuestros <span>Servicios</span> </h2>
         <div class="box-container">  
             <div data-aos="fade-right" data-aos-duration="2000" class="box">
                 <img src="images/productos2.png" alt="instalacionEntrada">
@@ -97,7 +98,7 @@
 
     <!-- products section starts -->
     <section class="products" id="products">
-        <h1 class="heading"> <span>Productos</span></h1>
+        <h2 class="heading"> <span>Productos</span></h2>
         <div class="box-container">
             <div class="box">
                 <div class="image">
@@ -110,38 +111,38 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img class="image1" src="images/productos2.png" alt="producto2">
+                    <img class="image1" src="images/productos2.png" alt="aire acondicionado split">
                 </div>
                 <div class="content">
-                    <h3>Productos nuevos</h3>
-                    <div class="price">€0 <span>€0</span></div>
+                    <h3>Split</h3>
+                    <div class="price">€200<span>€250</span></div>
                 </div>
             </div>
             <div class="box">
                 <div class="image">
-                    <img class="image1" src="images/productos2.png" alt="producto3">
+                    <img class="image1" src="images/productos3.png" alt="aire acondicionado de conducto">
                 </div>
                 <div class="content">
-                    <h3>Productos nuevos</h3>
-                    <div class="price">€0 <span>€0</span></div>
+                    <h3>De conducto</h3>
+                    <div class="price">€400<span>€600</span></div>
                 </div>
             </div>
             <div class="box">
                 <div class="image">
-                    <img class="image1" src="images/productos2.png" alt="producto4">
+                    <img class="image1" src="images/productos4.png" alt="aire acondicionado de cassette">
                 </div>
                 <div class="content">
-                    <h3>Productos nuevos</h3>
-                    <div class="price">€0 <span>€0</span></div>
+                    <h3>Cassette</h3>
+                    <div class="price">€150<span>€200</span></div>
                 </div>
             </div>
             <div class="box">
                 <div class="image">
-                    <img class="image1" src="images/productos2.png" alt="producto5">
+                    <img class="image1" src="images/productos5.png" alt="aire acondicionado de columna">
                 </div>
                 <div class="content">
-                    <h3>Productos nuevos</h3>
-                    <div class="price">€0 <span>€0</span></div>
+                    <h3>De columna</h3>
+                    <div class="price">€900<span>€1000</span></div>
                 </div>
             </div>
             <div class="box1">
@@ -156,15 +157,15 @@
     <!-- review section starts -->
     <section class="review" id="review">
 
-        <h1 class="heading"> Reseñas de <span>Clientes</span></h1>
+        <h2 class="heading"> <a href="https://www.google.com/maps/place/Clima+service/@37.976623,-0.6788436,17z/data=!4m7!3m6!1s0xd6307aff0857995:0x795e20fc6515c134!8m2!3d37.976623!4d-0.6788436!9m1!1b1">Reseñas</a> de <span>Clientes</span></h2>
 
         <div class="box-container">
 
             <div class="box">
-                <img src="images/quote-img.png" alt="" class="quote">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nostrum repellat alias non voluptate iusto exercitationem unde dolores mollitia dolorum.</p>
-                <img src="images/pic-1.png" class="user" alt="foto1">
-                <h3>Pepito Pérez</h3>
+                <img src="images/quote-img.png" class="quote" alt="signos de comillas">
+                <p>Buen servicio, puntualidad y seriedad, trabajo limpio y un gran profesional</p>
+                <img src="images/pic-1.png" class="user" alt="foto1reseña">
+                <h3>Elisabeth Lucas</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -175,9 +176,12 @@
             </div>
             <div class="box">
                 <img src="images/quote-img.png" alt="" class="quote">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nostrum repellat alias non voluptate iusto exercitationem unde dolores mollitia dolorum.</p>
-                <img src="images/pic-2.png" class="user" alt="foto2">
-                <h3>Naroha Perea</h3>
+                <p>Clima service nos ha realizado la instalación de un sistema de aire acondicionado por conductos en un piso, donde no estaba hecha la preinstalacion, y hemos quedado muy contentos.
+                    Iván muy profesional, puntual y rápido, desde que nos preparó el presupuesto hasta que concluyó la instalación.
+                    Muy buena relación Calidad-Precio para el servicio que ofrecen.
+                    Recomendable.</p>
+                <img src="images/pic-2.png" class="user" alt="foto2reseña">
+                <h3>Asier lau</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -188,9 +192,9 @@
             </div>
             <div class="box">
                 <img src="images/quote-img.png" alt="" class="quote">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nostrum repellat alias non voluptate iusto exercitationem unde dolores mollitia dolorum.</p>
-                <img src="images/pic-3.png" class="user" alt="foto3">
-                <h3>Santi Serrato</h3>
+                <p>Número 1, es el mejor. Lleva años climatizado mis obras, son muy profesionales</p>
+                <img src="images/pic-3.png" class="user" alt="foto3reseña">
+                <h3>Antonio Espinosa</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -207,12 +211,11 @@
     <!-- contact section starts -->
     <section class="contact" id="contact">
 
-        <h1 class="heading"> <span>Contacta con</span>  nosotros </h1>
+        <h2 class="heading"> <span>Contacta con</span>  nosotros </h2>
         <div class="row">
             <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.036666639402!2d-0.6829217846588!3d37.97627360831378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6307558b72bc37%3A0x7a53e8610c6bbf2c!2sC.%20de%20Pedro%20Lorca%2C%204%2C%2003181%20Torrevieja%2C%20Alicante!5e0!3m2!1ses!2ses!4v1649281706917!5m2!1ses!2ses"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-            <form action="https://formspree.io/f/meqnwnlo"
-            method="POST">
+            <form>
                 <h3>Mantente en contacto</h3>
                 <div class="inputBox">
                     <span class="fas fa-user"></span>
@@ -234,27 +237,40 @@
     <!-- contact section ends -->
 
     <!-- footer section starts -->
-    <section class="footer">
+    <footer>
 
         <div class="share">
-            <a href="#" class="fab fa-facebook"></a>
-            <a href="#" class="wp">
-                <img class="wp__1" src="images/wallapop-app.png" alt="logoWallapop">
-            </a>
-            <a href="#" class="wp">
-                <img class="wp__2" src="images/malogo.png" alt="logoMilAnuncios">
-            </a>
+            <ul class="social_icons">
+                <li>
+                    <a href="https://www.facebook.com/lomas1979">
+                        <img src="images/logo-facebook.png" alt="logoFacebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://api.whatsapp.com/send?phone=%2B34698549221&amp;fbclid=IwAR2YigwsiC0xRFXvz1XLRx4CcvRUB2--X2PNfAjL6yA8oaU9UgMH475AVwI" class="wp">
+                        <img class="wp__1" src="images/whatssap-logo.png" alt="logoWallapop">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.milanuncios.com/tienda/climafind-s-l-3148.htm" class="wp">
+                        <img class="wp__2" src="images/malogo.png" alt="logoMilAnuncios">
+                    </a>
+                </li>
+            </ul>
         </div>
+        <h4 class="credit">Tel:<span> 698 54 92 21 - 693 93 30 95</span></h4>
+        <h4 class="credit">Email:<span> climaservice@gmail.com</span></h4>
+        
         <div class="links">
             <a href="#home">Inicio</a>
-            <a href="#about">Sobre Nosotros</a>
-            <a href="#menu">Menú</a>
-            <a href="#products">Productos</a>
+            <a href="/pages/about.html">Sobre Nosotros</a>
+            <a href="/pages/install.html">Servicios</a>
+            <a href="/pages/venta.html">Productos</a>
             <a href="#review">Reviews</a>
-            <a href="#contact">Contacto</a>
+            <a href="/pages/contact.html">Contacto</a>
         </div>
-        <div class="credit">Creado por <span>Santiago Serrato</span> | todos los derechos reservados</div>
-    </section>
+        <h4 class="credit">Creado por <span>Santiago Serrato</span> | todos los derechos reservados</h4>
+    </footer>
     <!-- footer section ends -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
