--- a/pages/install.html
+++ b/pages/install.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- <meta description=""> -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta description=""> -->
-    <title>Clima Service</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <meta name="keywords" content="limpieza de pisos, instalación de aires acondicionados, mantenimiento y reparación de aires">
+    <meta name="description" content="Cuenta con nosotros cuando necesites cualquier tipo de instalación, reparación o mantenimiento de aires acondicionados, además de limpiezas de pisos luego de estos trabajos">
+    <meta name="author" content="Santiago Serrato">
+    <meta name="copyright" content="Clima service">
     <!--Font awesome cdn link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <!-- fuente oswald -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Servicios | Clima Service</title>
 </head>
 <body>
-    <div class="logo-container">
-    <div class="logo">
-        <a href="#home" class="logo"><img src="../images/Logoclimaservice.png" alt="">
-        </a>
-    </div>
-</div>
     <!--header section starts-->
     <header class="header">
+        
+        <div class="logo-container">
+            <a href="../index.html" class="logo">
+                <img src="../images/Logoclimaservice.png" alt="logoEmpresa">
+            </a>
+        </div>
 
         <nav class="navbar">
-            <a href="#home"> Inicio</a>
-            <a href="#about">Sobre nosotros</a>
-            <a href="#menu"></span>Servicios</a>
-            <a href="#products">Productos</a>
-            <a href="#review">Reviews</a>
-            <a href="#contact">Contacto</a>
+            <a href="../index.html">Inicio</a>
+            <a href="../pages/about.html">Sobre Nosotros</a>
+            <a href="#">Servicios</a>
+            <a href="../pages/venta.html">Productos</a>
+            <a href="../pages/contact.html">Contacto</a>
         </nav>
 
         <div class="icons">
@@ -42,60 +40,87 @@
     <!--header section ends-->
 
     <!-- cards section starts -->
-    <div class="container">
-        <div class="card">
-            <div class="face face1">
-                <div class="content">
-                    <img src="../images/productos1.jpeg" alt="">
-                    <h3>Instalación y mantenimiento</h3>
-                </div>
-            </div>
-            <div class="face face2">
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit saepe ad fuga. Quidem deserunt, natus, veniam vitae reiciendis commodi fugiat iure vero nostrum voluptas voluptate. A, nobis corrupti! Explicabo exercitationem animi vitae, enim hic ex quam nisi eum architecto soluta.</p>
-                    <a href="" class="btn">Leer más</a>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="face face1">
-                <div class="content">
-                    <img src="../images/productos2.png" alt="">
-                    <h3>Limpiezas</h3>
-                </div>
-            </div>
-            <div class="face face2">
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit saepe ad fuga. Quidem deserunt, natus, veniam vitae reiciendis commodi fugiat iure vero nostrum voluptas voluptate. A, nobis corrupti! Explicabo exercitationem animi vitae, enim hic ex quam nisi eum architecto soluta.</p>
-                    <a href="" class="btn">Leer más</a>
-                </div>
+    <section class="container">
+        <span class="mouse">
+            <i class="fa-solid fa-arrow-down mouse-wheel"></i>
+          </span>
+        <div class="item">
+            <img src="../images/instalacion.jpeg" alt="hombre instalando aire acondicionado">
+            <div>
+                <h2>instalación</h2>
+                <p>
+                    Servicio de <em>instalación</em> de todo tipo de equipos de aire acondicionado para cualquier dimensión de planta física
+                </p>
+                <p>Llámanos: <strong>698 54 92 21 - 693 93 30 95</strong></p>
             </div>
         </div>
-    </div>
+        <div class="item">
+            <img src="../images/reparacion.jpeg" alt="hombre reparando aire acondicionado">
+            <div>
+                <h2>Reparación</h2>
+                <p>
+                <em>Reparamos</em> las unidades de aires según su estado y años de funcionamiento
+                </p>
+                <p>Llámanos: <strong>698 54 92 21 - 693 93 30 95</strong></p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../images/mantenimiento.jpeg" alt="revision de gases aire acondicionado">
+            <div>
+                <h2>Mantenimiento</h2>
+                <p>
+                  Realizamos <em>mantenimiento</em> a los equipos que tengas en casa o que desees revisar para que permanezcan en correcto funcionamiento
+                </p>
+                <p>Llámanos: <strong>698 54 92 21 - 693 93 30 95</strong></p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../images/limpieza.jpeg" alt="personas limpiando">
+            <div>
+                <h2>Limpiezas</h2>
+                <p>
+                  Mantenemos tu casa <em>impecable</em> luego de cualquier tipo de reforma o de nuestras propias instalaciones
+                </p>
+                <p>Llámanos: <strong>693 93 26 31 - 693 93 30 95</strong></p>
+            </div>
+        </div>
+        
+      </section>
     <!-- cards section ends -->
 
     <!-- footer section starts -->
-    <section class="footer">
+    <footer>
 
         <div class="share">
-            <a href="#" class="fab fa-facebook"></a>
-            <a href="#" class="wp">
-                <img class="wp__1" src="../images/wallapop-app.png" alt="">
-            </a>
-            <a href="#" class="wp">
-                <img class="wp__2" src="../images/malogo.png" alt="">
-            </a>
+            <ul class="social_icons">
+                <li>
+                    <a href="https://www.facebook.com/lomas1979">
+                        <img src="../images/logo-facebook.png" alt="logoFacebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://api.whatsapp.com/send?phone=%2B34698549221&amp;fbclid=IwAR2YigwsiC0xRFXvz1XLRx4CcvRUB2--X2PNfAjL6yA8oaU9UgMH475AVwI" class="wp">
+                        <img class="wp__1" src="../images/whatssap-logo.png" alt="logoWallapop">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.milanuncios.com/tienda/climafind-s-l-3148.htm" class="wp">
+                        <img class="wp__2" src="../images/malogo.png" alt="logoMilAnuncios">
+                    </a>
+                </li>
+            </ul>
         </div>
+        <h4 class="credit">Tel:<span> 698 54 92 21 - 693 93 30 95</span></h4>
+        <h4 class="credit">Email:<span> climaservice@gmail.com</span></h4>
         <div class="links">
-            <a href="#home">Inicio</a>
-            <a href="#about">Sobre Nosotros</a>
-            <a href="#menu">Menú</a>
-            <a href="#products">Productos</a>
-            <a href="#review">Reviews</a>
-            <a href="#contact">Contacto</a>
+            <a href="/index.html">Inicio</a>
+            <a href="/pages/about.html">Sobre Nosotros</a>
+            <a href="#">Servicios</a>
+            <a href="/pages/venta.html">Productos</a>
+            <a href="/pages/contact.html">Contacto</a>
         </div>
         <div class="credit">Creado por <span>Santiago Serrato</span> | todos los derechos reservados</div>
-    </section>
+    </footer>
     <!-- footer section ends -->
 </body>
 </html>
